Adicionado seçao de comidas

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </li>
 
         <li>
-          <div>
+          <div class="details">
             <h3>Maça doce</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -59,7 +59,7 @@
       <ul>
         <li>
           <div class="details">
-            <h3>vinho</h3>
+            <h3>Vinho</h3>
             <p class="description">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </p>
@@ -71,7 +71,7 @@
         </li>
 
         <li>
-          <div>
+          <div class="details">
             <h3>Água com gás</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -84,5 +84,39 @@
         </li>
       </ul>
     </section>
+
+
+<section>
+      <h2>Comidas</h2>
+
+      <ul>
+        <li>
+          <div class="details">
+            <h3>Carne</h3>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+          <strong>
+            R$37,70
+          </strong>
+
+        </li>
+
+        <li>
+          <div class="details">
+            <h3>Arroz</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+          <strong>
+            R$17,70
+          </strong>
+
+        </li>
+      </ul>
+    </section>
+
   </body>
 </html>
